25 November 2020: Wouter
	- with udp-connect ignore connection refused with UDP timeouts.
	- Fix udp-connect on FreeBSD, do send calls on connected UDP socket.

24 November 2020: Wouter
	- Merge PR #283 : Stream reuse.  This implements upstream stream
	  reuse for performing several queries over the same TCP or TLS
	  channel.
	- set version of main branch to 1.13.0 for upcoming release.
	- iana portlist updated.
	- Fix one port unit test for udp-connect.
	- tag for the 1.13.0rc1 release.
	- Fix crash when TLS connection is closed prematurely, when
	  reuse tree comparison is not properly identical to insertion.
	- Fix padding of struct regional for 32bit systems.

23 November 2020: George
	- Merge PR #313 from Ralph Dolmans: Replace edns-client-tag with
	  edns-client-string option.

23 November 2020: Wouter
	- Merge #351 from dvzrv: Add AF_NETLINK to set of allowed socket
	  address families.
	- Fix #350: with the AF_NETLINK permission, to fix 1.12.0 error:
	  failed to list interfaces: getifaddrs: Address family not
	  supported by protocol.
	- Fix #347: IP_DONTFRAG broken on Apple xcode 12.2.
	- Option to toggle udp-connect, default is enabled.
	- Fix for #303 CVE-2020-28935 : Fix that symlink does not interfere
	  with chown of pidfile.
	- Further fix for it and retvalue 0 fix for it.

12 November 2020: Wouter
	- Fix to connect() to UDP destinations, default turned on,
	  this lowers vulnerability to ICMP side channels.
	- Retry for interfaces with unused ports if possible.

10 November 2020: Wouter
	- Fix #341: fixing a possible memory leak.
	- Fix memory leak after fix for possible memory leak failure.
	- Fix #343: Fail to build --with-libnghttp2 with error: 'SSIZE_MAX'
	  undeclared.

27 October 2020: Wouter
	- In man page note that tls-cert-bundle is read before permission
	  drop and chroot.

22 October 2020: Wouter
	- Fix #333: Unbound Segmentation Fault w/ log_info Functions From
	  Python Mod.